new css, still a work in progress

--- a/menu/index.html
+++ b/menu/index.html
@@ -18,6 +18,7 @@
       <ul class="dropdown">
         <li><a id="rounded_white" class="CSSmenu">Rounded&nbsp;white</a></li>
         <li><a id="square_silver" class="CSSmenu">Square&nbsp;silver</a></li>
+        <li><a id="gradient" class="CSSmenu">Gradient</a></li>
       </ul>
     </li>    
   </ul>
@@ -33,7 +34,7 @@
     <li class="Tmenu_root Tmenu_spacer">&nbsp;</li>
     <li class="Tmenu_root ddtrigger">
       <a href="#" class="Tmenu Tmenu_active">dropdown</a>
-      <ul class="dropdown">
+      <ul class="Tmenu dropdown">
         <li class="Tmenu drtrigger">
           <ul class="dropright">
             <li class="Tmenu"><a class="Tmenu">subone</a></li>
@@ -43,11 +44,11 @@
         </li>
         <li class="Tmenu"><a class="Tmenu">one</a></li>
         <li class="Tmenu"><a class="Tmenu">two</a></li>
-        <li class="drtrigger">
+        <li class="Tmenu drtrigger">
           <ul class="dropright">
             <li class="Tmenu"><a class="Tmenu">subone</a></li>
-            <li class="drtrigger">
-              <ul class="dropright">
+            <li class="Tmenu drtrigger">
+              <ul class="Tmenu dropright">
                 <li class="Tmenu"><a class="Tmenu">subsubone</a></li>
                 <li class="Tmenu"><a class="Tmenu">subsubtwo&nbsp;but&nbsp;a&nbsp;very&nbsp;long&nbsp;one</a></li>
               </ul>
@@ -62,7 +63,7 @@
     <li class="Tmenu_root Tmenu_spacer">&nbsp;</li>
     <li class="Tmenu_root ddtrigger">
       <a class="Tmenu" href="#">dropdown 2 </a>
-      <ul class="dropdown">
+      <ul class="Tmenu dropdown">
         <li class="Tmenu"><a class="Tmenu">one</a></li>
         <li class="Tmenu"><a class="Tmenu">two</a></li>
       </ul>
