added Footer menu gradient css

--- a/menu/index.html
+++ b/menu/index.html
@@ -38,9 +38,9 @@
         <li class="Tmenu drtrigger">
           <ul class="dropright">
             <li class="Tmenu"><a class="Tmenu">subone</a></li>
-            <li class="Tmenu"><a class="Tmenu Tmenu_active">subtwo</a></li>
+            <li class="Tmenu"><a class="Tmenu">subtwo</a></li>
           </ul>
-          <a href="#" class="Tmenu Tmenu_active">dropright 1</a>
+          <a href="#" class="Tmenu">dropright 1</a>
         </li>
         <li class="Tmenu"><a class="Tmenu">one</a></li>
         <li class="Tmenu"><a class="Tmenu">two</a></li>
@@ -49,14 +49,14 @@
             <li class="Tmenu"><a class="Tmenu">subone</a></li>
             <li class="Tmenu drtrigger">
               <ul class="Tmenu dropright">
-                <li class="Tmenu"><a class="Tmenu">subsubone</a></li>
+                <li class="Tmenu"><a class="Tmenu Tmenu_active">subsubone</a></li>
                 <li class="Tmenu"><a class="Tmenu">subsubtwo&nbsp;but&nbsp;a&nbsp;very&nbsp;long&nbsp;one</a></li>
               </ul>
-              <a class="Tmenu" href="#">SubDropRight</a>
+              <a class="Tmenu  Tmenu_active" href="#">SubDropRight</a>
             </li>
             <li class="Tmenu"><a class="Tmenu">subtwo</a></li>
           </ul>
-          <a class="Tmenu" href="#">dropright 2</a>
+          <a class="Tmenu Tmenu_active" href="#">dropright 2</a>
         </li>
       </ul>
     </li>
@@ -166,10 +166,10 @@
         <li class="Fmenu drtrigger">
           <ul class="dropright Fmenu">
             <li class="Fmenu"><a class="Fmenu">subone</a></li>
-            <li class="Fmenu"><a class="Fmenu Fmenu_active">subtwo</a></li>
+            <li class="Fmenu"><a class="Fmenu">subtwo</a></li>
             <li class="Fmenu"><a class="Fmenu">subtree</a></li>
           </ul>
-          <a href="#" class="Fmenu Fmenu_active">dropright 1</a>
+          <a href="#" class="Fmenu">dropright 1</a>
         </li>
         <li class="Fmenu drtrigger">
           <ul class="dropright Fmenu">
@@ -194,24 +194,24 @@
             <li class="Fmenu"><a class="Fmenu">subone</a></li>
             <li class="Fmenu drtrigger">
               <ul class="dropright Fmenu">
-                <li class="Fmenu"><a class="Fmenu">subsubone</a></li>
+                <li class="Fmenu"><a class="Fmenu Fmenu_active">subsubone</a></li>
                 <li class="Fmenu"><a class="Fmenu">subsubtwo&nbsp;but&nbsp;a&nbsp;very&nbsp;long&nbsp;one</a></li>
               </ul>
-              <a class="Fmenu" href="#">SubDropRight</a>
+              <a class="Fmenu  Fmenu_active" href="#">SubDropRight</a>
             </li>
             <li class="Fmenu"><a class="Fmenu">subtwo</a></li>
           </ul>
-          <a class="Fmenu" href="#">dropright 2</a>
+          <a class="Fmenu Fmenu_active" href="#">dropright 2</a>
         </li>
       </ul>
     </li>
     <li class="Fmenu_root Fmenu_spacer">&nbsp;</li>
     <li class="Fmenu_root dutrigger">
       <a class="Fmenu" href="#">dropUp 2</a>
-      <ul class="dropup">
+      <ul class="dropup Fmenu">
         <li class="Fmenu"><a class="Fmenu">one</a></li>
         <li class="Fmenu"><a class="Fmenu">two</a></li>
-        <li class="dltrigger">
+        <li class="dltrigger Fmenu">
           <ul class="dropleft Fmenu">
             <li class="Fmenu"><a class="Fmenu">subone</a></li>
             <li class="Fmenu"><a class="Fmenu">subtwo</a></li>
@@ -222,7 +222,7 @@
           </li>
       </ul>
     </li>
-    <li class="Fmenu_root Tmenu_spacer">&nbsp;</li>
+    <li class="Fmenu_root Fmenu_spacer">&nbsp;</li>
     <li class="Fmenu_root">
       <a class="Fmenu">no child 2</a>
     </li>
